--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -11,7 +11,7 @@
     "files.eol": "\n",
     "workbench.tree.indent": 22,
     "workbench.tree.renderIndentGuides": "always",
-    "workbench.editor.showTabs": false,
+    "workbench.editor.showTabs": "multiple",
     "editor.tabSize": 2,
     "typescript.updateImportsOnFileMove.enabled": "always",
     "cSpell.language": "en,de-DE,en-GB,en-US,de",
@@ -19,7 +19,6 @@
     "editor.guides.indentation": true,
     "javascript.updateImportsOnFileMove.enabled": "always",
     "extensions.ignoreRecommendations": true,
-    "template-string-converter.addBracketsToProps": true,
     "javascript.format.semicolons": "insert",
     "javascript.inlayHints.functionLikeReturnTypes.enabled": true,
     "javascript.inlayHints.parameterNames.enabled": "all",
@@ -28,24 +27,16 @@
     "javascript.preferences.quoteStyle": "single",
     "typescript.preferences.quoteStyle": "single",
     "explorer.decorations.badges": false,
-    "material-icon-theme.hidesExplorerArrows": true,
-    "material-icon-theme.folders.theme": "classic",
-    "workbench.iconTheme": "material-icon-theme",
-    "auto-close-tag.activationOnLanguage": [
-        "javascriptreact",
-        "typescriptreact",
-        "html"
-    ],
-    "redhat.telemetry.enabled": true,
+    "redhat.telemetry.enabled": false,
     "workbench.colorTheme": "Gruvbox Dark Hard",
     "editor.lineNumbers": "relative",
-    "workbench.editor.limit.value": 1,
-    "editor.minimap.enabled": false,
-    "workbench.activityBar.visible": false,
+    "workbench.editor.limit.value": 10,
     "workbench.editor.enablePreview": false,
     "workbench.layoutControl.enabled": false,
     "window.title": "${dirty}${activeEditorLong}",
     "workbench.tips.enabled": false,
     "workbench.editor.limit.enabled": true,
-    "breadcrumbs.enabled": false
+    "breadcrumbs.enabled": false,
+    "workbench.activityBar.location": "hidden",
+    "chat.commandCenter.enabled": false
 }
