--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -10,6 +10,12 @@ shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
 shadow-opacity = 0.7;
+shadow-exclude = [
+ "class_g ?= 'Notify-osd'",
+ "_GTK_FRAME_EXTENTS@:c",
+ "(window_type = 'utility' || window_type = 'popup_menu') && argb", # Remove Shadows from firefox menues 
+ "class_g = 'Polybar'"
+];
 
 # Fading settings
 fading = true;
@@ -19,19 +25,14 @@ fade-out-step = 0.03;
 
 # Opacity settings
 active-opacity = 1.0;
-inactive-opacity = 0.9;
+inactive-opacity = 1.00;
 frame-opacity = 0.8;
 
 # Blur settings
-blur-background = true;
-blur-method = "dual_kawase";
-blur-strength = 3;
+#blur-background = false;
+#blur-method = "dual_kawase";
+#blur-strength = 0;
 
 # Other settings
 use-damage = true;
 vsyncc = false;
-
-wintypes:
-{
-  menu = { shadow = false; blur-background = false;}
-};
