--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -11,7 +11,7 @@ bindd = $mainMod, E, Opens your preferred filemanager ($filemanager), exec, $fil
 bindd = $mainMod, Q, Closes (not kill) current window, killactive,
 bindd = $mainMod SHIFT, M, Exits Hyprland by terminating the user sessions, exec, loginctl terminate-user ""
 bindd = $mainMod, V, Switches current window between floating and tiling mode, togglefloating,
-bindd = $mainMod, SPACE, Runs your application launcher, exec, $applauncher
+bindd = $mainMod, D, Runs your application launcher, exec, $applauncher
 bindd = $mainMod, F, Toggles current window fullscreen mode, fullscreen
 bindd = $mainMod, Y, Pin current window (shows on all workspaces), pin
 bindd = $mainMod, J, Toggles current window split mode, togglesplit, # dwindle
@@ -19,16 +19,12 @@ bindd = $mainMod, J, Toggles current window split mode, togglesplit, # dwindle
 bindd = , Print, Creates a screenshot of an area, exec, $shot-region
 bindd = CTRL, Print, Creates a screenshot of the active window, exec, $shot-window
 bindd = ALT, Print, Creates a screenshot of the active display, exec, $shot-screen
+bindd = $mainMod SHIFT, S, Snipping tool like screenshot, exec, hyprshot --mode region --freeze --output-folder ~/Pictures/Screenshots
 
 # ======= Grouping Windows =======
 
 bindd = $mainMod, K, Toggles  current window group mode (ungroup all related), togglegroup,
 bindd = $mainMod, Tab, Switches to the next window in the group, changegroupactive, f
-
-# ======= Toggle Gaps =======
-
-bindd = $mainMod SHIFT, G, Set CachyOS default gaps, exec, hyprctl --batch "keyword general:gaps_out 5;keyword general:gaps_in 3"
-bindd = $mainMod, G, Remove gaps between window, exec, hyprctl --batch "keyword general:gaps_out 0;keyword general:gaps_in 0"
 
 # ======= Volume Control =======
 
@@ -46,7 +42,7 @@ bindd = , XF86AudioPrev, Previous track, exec, playerctl previous
 
 bindel = , XF86MonBrightnessUp, exec, brightnessctl s +5% 	#Increases brightness 5%
 bindel = , XF86MonBrightnessDown, exec, brightnessctl s 5%- 	#Decreases brightness 5%
-bindd = $mainMod, L, Lock the screen, exec, swaylock-fancy -e -K -p 10 -f Hack-Regular
+bindd = CTRL SHIFT, L, Lock the screen, exec, swaylock-fancy -e -K -p 10 -f Hack-Regular
 bindd = $mainMod, O, Reload/restarts Waybar, exec, killall -SIGUSR2 waybar
 
 # ======= Window Actions =======
