--- a/.config/hypr/config/variables.conf
+++ b/.config/hypr/config/variables.conf
@@ -23,8 +23,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-     workspace_swipe = true
-     workspace_swipe_fingers = 4
+     #workspace_swipe = true
+     #workspace_swipe_fingers = 4
      workspace_swipe_distance = 250
      workspace_swipe_min_speed_to_force = 15
      workspace_swipe_create_new = false
@@ -50,8 +50,8 @@ group {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    font_family = "Fira Sans"
-    splash_font_family = "Fira Sans"
+    font_family = "RobotoMono Nerd Font"
+    splash_font_family = "RobotoMono Nerd Font"
     disable_hyprland_logo = true
     col.splash = $cachylgreen
     background_color = $cachydblue
