--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -9,28 +9,28 @@
 
     "height": 10,
 
-    "margin-left": 2,
+    "margin-left": 0,
     "margin-bottom": 0,
-    "margin-right": 2,
+    "margin-right": 0,
 
-    "spacing": 4, // Gaps between modules (4px)
+    "spacing": 0, // Gaps between modules (4px)
 
     "modules-left": [
         //"custom/rofi",
         "hyprland/workspaces",
+        "hyprland/window"
         //"hyprland/submap",
         //"temperature",
         //"idle_inhibitor",
         //"mpd"
-        "custom/spotify"
     ],
     "modules-center": [
-        //"hyprland/window"
         //"custom/weather"
         //"custom/gammastep"
         "clock#date"
     ],
     "modules-right": [
+        "custom/spotify",
         //"backlight",
         //"custom/storage",
         "memory",
@@ -103,7 +103,7 @@
 
     "memory": {
         "interval": 30,
-        "format": "  {used:0.2f} / {total:0.0f} GB",
+        "format": "  {used:0.1f} GB",
         "on-click": "alacritty -e btop"
     },
 
@@ -188,7 +188,7 @@
 
 "custom/spotify": {
     "exec": "~/.config/waybar/mediaplayer.py --player spotify",
-    "format": "{}  ",
+    "format": " {}",
     "return-type": "json",
     "on-click": "playerctl play-pause",
     "on-scroll-up": "playerctl next",
@@ -214,14 +214,8 @@
         "on-click": "wlogout"
     },
 
-    "clock": {
-        "format": "{:%H:%M %e %b}",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "today-format": "<b>{}</b>"
-    },
-
     "clock#date": {
-        "format": "{:%H:%M:%S %e %b}",
+        "format": " {:%H:%M   %e %B}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "today-format": "<b>{}</b>"
     },
@@ -320,7 +314,7 @@
 
     "hyprland/window": {
         "max-length": 100,
-        "separate-outputs": true
+        "separate-outputs": true,
     },
 
     "pulseaudio": {
